@@ -1,4 +1,10 @@
 2014-09-08  James Pallister  <james.pallister@embecosm.com>
+	Added the ror, rol, asr and lsr AVR instructions
+
+	* superopt.c (output_assembly): Added assembly output for the above
+	* synth.def: Added calls to the above instructions.
+
+2014-09-08  James Pallister  <james.pallister@embecosm.com>
 	Made the hashtable usage conditional on DO_HASHTABLE
 
 	* superopt.c: Added the DO_HASHTABLE preprocessor defined, to decide
